2006-02-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/libpq/8.1/config-internal-libpq.h
  - New
  - Adds PQserverVersion()--thanks Bart Samwel
  - Adds PQprepare()
 include/pqxx/basic_connection.hxx, include/pqxx/connection_base.hxx,
 include/pqxx/connectionpolicy.hxx, src/connection_base.cxx,
 src/connection.cxx:
  - Moved workaround for MSVC++ "output in destructor" bug to leaf destructor
  - Fixed late activation in "direct" connections (thanks Bart Samwel)
  - Explicitly zero-initialize capabilities (thanks Bart Samwel)
  - Allow friends to set capabilities explicity (handy if proven present)
 include/pqxx/compiler-internal.hxx, include/pqxx/compiler-public.hxx:
  - Moved Visual C++ "silence stupid warning" pragmas to "internal" header
  - Silence Visual C++ warning 4800 from here
 include/pqxx/subtransaction.hxx, src/subtransaction.cxx:
  - More intelligent check for nested-transactions support on the backend
 test/test074.cxx:
  - More work on silencing pointless Visual C++ warning, thanks Bart Samwel
 tools/maketestvcmak.pl, tools/makevcmake.pl:
  - Made compatible with Windows, thanks Bart Samwel
  - Missing compiler options from Bart's previous patch
  - Deal with release/debug mode incompatibility, (Bart Samwel)
  - Run tests after building them (Bart Samwel)
  - Don't silence libpqxx warnings from makefile
2006-02-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/pipeline.hxx:
  - Missing include: limits.  Thanks Bart Samwel.
 include/pqxx/tablereader.hxx, include/pqxx/tablewriter.hxx:
  - Work around Visual C++.NET 2003 bugs, thanks Bart "Handyman" Samwel!
 include/pqxx/util.hxx:
  - Forgot to export pqxx::internal::freepqmem (Bart "you-know-who" Samwel)
 test/test040.cxx, test/test041.cxx, test/test044.cxx:
  - Emit warnings about warnings about obsolete headers (still Bart Samwel)
 test/test060.cxx, test/test064.cxx, test/test089.cxx:
  - Unused but named exception references (Bart "him again" Samwel)
 test/test074.cxx: